backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: openai-proxy
          image: leonseng/openai-proxy-with-f5-guardrails:0.8.1
          imagePullPolicy: IfNotPresent
