backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - namespace: nginx-gateway
      name: inference-gateway
      sectionName: client-side
  hostnames:
    - "backend.ngf-agentic-reference-stack.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 8000
